client-server exchange complete